# Repo2Data

./: .gitignore  BUILD  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  todo_list
.circleci/: config.yml
.github/workflows/: test_release.yml  workflow.yml
examples/: data_requirement.json  data_requirement_datalad.json  data_requirement_gzip.json  data_requirement_multiple.json  data_requirement_nilearn.json  data_requirement_s3.json  gdrive.json  gzip.json  multiple.json  osf.json
repo2data/: data2bids.py  repo2data.py  utils.py
tests/: test_datalad.py  test_gdrive.py  test_gzip.py  test_multiple.py  test_neurolibre_layout.py  test_osf.py  test_s3.py  test_server.py  test_sklearn.py  test_url.py  test_zenodo.py
tests/in/: datalad.json  gdrive.json  gzip.json  multiple.json  osf.json  s3.json  server.json  sklearn.json  zenodo.json
tests/in/neurolibre/binder/: neurolibre_layout.json
tools/: tools.py
